# Portfolio

./: README.md
Arduino/: timelapse.ino
CPlusPlus/Xenon2/: Xenon2.sln
CPlusPlus/Xenon2/XEFS/: XEFS.cpp  XEFS.vcxproj  XEFS.vcxproj.filters  framework.h  xfs_main.h
CPlusPlus/Xenon2/Xenon2/: README.md  Xenon2.vcxproj  Xenon2.vcxproj.filters  compile_shader.bat  factories.cpp  frag.frag  main.cpp  packages.config  shader_structs.h  vert.vert  xe_api.cpp  xe_api.h  xe_buffer.cpp  xe_buffer.h  xe_descriptor_template.cpp  xe_descriptor_template.h  xe_deviceManager.cpp  xe_deviceManager.h  xe_engine.cpp  xe_engine.h  xe_entity.cpp  xe_file.h  xe_logger.h  xe_material.cpp  xe_memory.cpp  xe_pipeline.cpp  xe_renderer.cpp  xe_renderer.h  xe_scene.cpp  xe_script.cpp  xe_stream.cpp  xe_stream.h  xe_surface.cpp  xe_surface.h  xe_texture.cpp  xe_texture.h  xe_util_impl.cpp  xe_utility.cpp  xe_utility.h  xenon.h
CPlusPlus/Xenon2/xecli/: entity.xml  frag.spv  game.dystro  game.dystro.dxlib  material.xml  new.txt  scene.xml  shader.xml  vert2.spv  xecli.cpp  xecli.vcxproj  xecli.vcxproj.filters
CPlusPlus/brainvisualizer/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CPlusPlus/brainvisualizer/NeuralVisualizer/: CMakeCache.txt  CMakeLists.txt  Makefile  NeuralVisualizer.cpp  NeuralVisualizer.h  StripVisualizer.cpp  StripVisualizer.h  cmake_install.cmake  muse_ctrl.h
CSharp/Novovu.Xenon/: Novovu.Xenon.sln
CSharp/NovovuWorkshopG3/: .gitignore  NovovuWorkshopG3.sln  copyover.txt  zencfg.xml
CSharp/Peridot/: .gitignore  Peridot.sln  README.md
CSharp/ProjectEmergencyFramework/: ProjectEmergencyFramework.sln
Javascript/timelapse/: package.json
Python/: IonProblem3.ipynb  controller.py
(+735 files in other folders)
